# mortgage-doc-rag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
data/: checksums.csv  manifest.csv
data/ground_truth/appraisal/: urar_form_1004_blank.txt  urar_form_1004_epa.txt  va_sample_appraisal_report.txt
data/ground_truth/circular/: va_circular_26_21_09.txt
data/ground_truth/closing_disclosure/: cd_annotated_rule_citations.txt  cd_annotated_tila_citations.txt  cd_blank_h25a.txt  cd_blank_no_seller_h25hj.txt  cd_blank_no_seller_spanish_h28j.txt  cd_blank_pace.txt  cd_blank_pace_spanish.txt  cd_blank_spanish_h28f.txt  cd_page2_cost_modifications_h25h.txt  cd_page3_poc_h25d1.txt  cd_page3_second_lien_h25c.txt  cd_sample_fixed_rate_h25b.txt  cd_sample_fixed_spanish_h28g.txt  cd_sample_refi_additional_funds_h25g.txt  cd_sample_refi_excess_cost_h25f1.txt  (+3 more)
data/loan_files/: loan_file_01_conflicting_cd.json  loan_file_02_injection.json  loan_file_03_income_conflict.json
docs/: ai-assisted.md  architecture.md  design.md
evals/: golden_set.jsonl  report-bm25.md  report-rerank.md  report.md  retrievers.py  run_eval.py  scoring.py
evals/baselines/: bm25.json  latest.json  rerank.json
notebooks/: demo.ipynb
scripts/: backfill_confusion.py  build_loan_files.py  degrade_scans.py  download_data.py  make_ground_truth.py  make_paystubs.py  run_ablations.sh
src/mortgage_rag/: __init__.py  app.py  backends.py  chunking.py  config.py  ocr.py  orchestrator.py  pipeline.py  rag.py  validation.py
tests/: test_eval_metrics.py  test_scoring.py  test_smoke.py
(+42 files in other folders)
