[project]
name = "mortgage-rag"
version = "0.1.0"
description = "Mortgage document RAG pipeline with dual-engine OCR, doc-type separation, and a layered evaluation harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tinh Cao" }]
dependencies = [
    "pymupdf>=1.24",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "langchain-text-splitters>=0.2",
    "llama-index-core>=0.11",
    "llama-index-embeddings-huggingface>=0.3",
    "huggingface-hub>=0.24",
    "pyyaml>=6.0",
    "requests>=2.31",
    "jiwer>=3.0",
    "tesserocr>=2.10.0",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.2.90",
    "llama-index-llms-llama-cpp>=0.2",
]
ui = ["gradio>=4.44"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mortgage_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
